samples/_failures_safe/1761697647_e462b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fc74945.c: In function ‘main’:
./samples/SAFE/__tmp_1fc74945.c:132:9: error: expected expression at end of input
  132 |         if (parsed != 3)
      |         ^~
./samples/SAFE/__tmp_1fc74945.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1fc74945.c:132:9: error: expected declaration or statement at end of input
